<resources>
    <string name="app_name">100 Dúvidas</string>
    <string name="question_prompt">Qual é a sua dúvida?</string>
    <string name="moment_placeholder">19:25</string>
    <string name="anonymous_name">Anônimo</string>
    <string name="question_hint">Faça a sua pergunta</string>
    <string name="send">Enviar</string>
    <string name="anonymous">Anônima?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="peace_btn_text">De boa</string>
    <string name="panic_btn_text">Pânico</string>
    <string name="answer_comment_prompt">Comentário</string>
    <string name="last_modified_text">Última modificação:</string>
    <string name="lore_ipsum">Lore Ipsum</string>

    <string name="email_prompt">Email</string>
    <string name="password_prompt">Senha</string>
    <string name="signin">Entrar</string>
    <string name="send_reset">Email</string>
    <string name="send_email">Enviar</string>
    <string name="signup_text">Cadastrar</string>
    <string name="email_confirmation_prompt">Confirme o email</string>
    <string name="password_confirmation_prompt">Confirme a senha</string>
    <string name="name_prompt">Nome</string>

    <string name="drawer_opening">Abrindo janela de navegação</string>
    <string name="drawer_closing">Fechando janela de navegação</string>

    <string name="not_authenticated_user_question">É necessário estar logado para fazer perguntas</string>
    <string name="moodle_pass_prompt">Senha do Moodle</string>
    <string name="unauth_username">Usuário não logado</string>
</resources>
