<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/last_modified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_modified_text"/>

        <TextView
            android:id="@+id/last_modified_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moment_placeholder"
            android:layout_toRightOf="@id/last_modified"/>

        <TextView
            android:id="@+id/last_modified_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anonymous_name"
            android:layout_toRightOf="@id/last_modified_time"/>

        <TextView
            android:id="@+id/answer_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lore_ipsum"
            android:layout_below="@id/last_modified"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>