<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding"
    tools:context=".QuestionComposer">


    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/question_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/question_hint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>


    <CheckBox
        android:id="@+id/anonymous_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/anonymous"/>

    <Button
        android:id="@+id/send_question_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"/>



</LinearLayout>